# mta-info

./: .gitignore  README.md  TODO.md  TODO.org  analyze_stops.py  combine_stops_to_json.py  create_map_layers.py  get_select_routes.py  pyproject.toml  retrieve.py  route_groups.py  scratch.py  utils.py
data/: agency_MTA NYCT.xml  agency_MTABC.xml  old_stops.csv
data/layers/: group_0.csv  group_1.csv  group_2.csv  group_3.csv  group_4.csv  group_5.csv  group_6.csv  group_7.csv
data/routes/: all_routes.json
data/routes/B1/: stops.json
data/routes/B100/: stops.json
data/routes/B103/: stops.json
data/stops/: B101.json  B11.json  B15.json  B2.json  B20.json  B26.json  B36.json  B38.json  B39.json  B41.json  B42.json  B44.json  B45.json  B46-SBS.json  B47.json  B52.json  B60.json  B62.json  B63.json  B65.json  B67.json  B7.json  B70.json  B74.json  B82-SBS.json  B83.json  B84.json  B90.json  B96.json  BM2.json  BM3.json  BX92.json  Bx1.json  Bx11.json  Bx12.json  Bx16.json  Bx18A.json  Bx18B.json  Bx19.json  Bx2.json  (+143 more)
src/: create_map_layers.py  get_select_routes.py  retrieve.py  route_groups.py  utils.py
src/mta_info/: cli.py  create_map_layers.py  get_select_routes.py  retrieve.py  route_groups.py  utils.py
temp/: abc.xml  agency_MTA%20NYCT.xml  agency_MTABC.xml  attempt.csv  color_try.csv  formatted_routes.json  nyct.xml  overlap.json  routes.xml  try_1.csv  try_10.csv  try_11.csv  try_12.csv  try_13.csv  try_2.csv  try_3.csv  try_4.csv  try_5.csv  try_6.csv  try_7.csv  try_8.csv  try_9.csv  unique_descriptions.json  unique_longnames.json
(+174 files in other folders)
